scrollbar contactlist fix

--- a/src/app/maincontent/contacts/contactlist/contactlist.component.scss
+++ b/src/app/maincontent/contacts/contactlist/contactlist.component.scss
@@ -32,7 +32,7 @@
   padding-bottom: 17px;
   margin-bottom: 17px;
   @media (max-width: 410px) {
-    width: 270px;
+    width: 245px;
   }
 }
 
@@ -42,6 +42,7 @@
   height: 78px;
   align-items: center;
   padding-left: 20px;
+  cursor: pointer;
   @media (max-width: 410px) {
     width: 270px;
   }
